Updated about page to show more information about the webpage purpose

--- a/About.cshtml
+++ b/About.cshtml
@@ -5,30 +5,35 @@
 
 <hgroup class="title">
     <h1>@Page.Title.</h1>
-    <h2>Your app description page.</h2>
+    <h2>This web page is a project where you can plan a trip.</h2>
 </hgroup>
 
 <article>
     <p>
-        Use this area to provide additional information.
+        Register item to commit before the trip.
     </p>
 
     <p>
-        Use this area to provide additional information.
+        Register items to carry on the trip.
     </p>
 
     <p>
-        Use this area to provide additional information.
+        Checklist of trip items.
+    </p>
+
+    <p>
+        Set item commited.
     </p>
 </article>
 
 <aside>
-    <h3>Aside Title</h3>
+    <h3>Important links</h3>
     <p>
-        Use this area to provide additional information.
+        You will have the important links that you should visit on this website
     </p>
     <ul>
-        <li><a href="~/">Home</a></li>
+        <li><a href="~/">Trip List</a></li>
+        <li><a href="~/">Next Trip</a></li>
         <li><a href="~/About">About</a></li>
         <li><a href="~/Contact">Contact</a></li>
     </ul>
