Updated about page to describe more information that the web page has

--- a/About.cshtml
+++ b/About.cshtml
@@ -9,21 +9,42 @@
 </hgroup>
 
 <article>
-    <p>
-        Register item to commit before the trip.
-    </p>
+    <h1>Breaking Plans</h1>
+    <p><strong>Author:</strong> Luis Arce, <strong>Published:</strong> Today</p>
+
+    <div>
+        <img src="https://worldtraveland.files.wordpress.com/2014/03/planning-the-trip-1.jpg" width="100%">
+        <span>Planning your trips</span>
+    </div>
 
     <p>
-        Register items to carry on the trip.
+        This website will provide your a good way to handle your trips.
     </p>
-
     <p>
-        Checklist of trip items.
+        With this you are going to plan the steps that you need to follow to have a successful trip, and the goals that you
+        need to complete to
     </p>
+    <p>Here you have the features availables on this platform</p>
 
-    <p>
-        Set item commited.
-    </p>
+    <ul>
+        <li>
+            Register item to commit before the trip.
+        </li>
+
+        <li>
+            Register items to carry on the trip.
+        </li>
+
+        <li>
+            Checklist of trip items.
+        </li>
+
+        <li>
+            Set item commited.
+        </li>
+    </ul>
+
+
 </article>
 
 <aside>
