Updated default page template

--- a/Default.cshtml
+++ b/Default.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     Layout = "~/_SiteLayout.cshtml";
-    Page.Title = "Home Page";
+    Page.Title = "Welcome";
 }
 
 @section featured {
@@ -8,39 +8,52 @@
     <div class="content-wrapper">
         <hgroup class="title">
             <h1>@Page.Title.</h1>
-            <h2>Modify this template to jump-start your ASP.NET Web Pages application.</h2>
+            <h2>Plan your trips and be aware of what things you should do before going to enjoy your trip.</h2>
         </hgroup>
         <p>
-            To learn more about ASP.NET Web Pages, visit
-            <a href="https://asp.net/webpages" title="ASP.NET Web Pages Website">https://asp.net/webpages</a>.
-            The page features <mark>videos, tutorials, and samples</mark> to help you get the most from ASP.NET Web Pages.
-            If you have any questions about ASP.NET Web Pages, visit
-            <a href="https://forums.iis.net/1166.aspx" title="ASP.NET Web Pages Forum">our forums</a>.
+            You can share your trips with people that can be interested to the same trip and maybe you 
+            can be happy to go with them.
         </p>
     </div>
 </section>
 }
 
-<h3>We suggest the following:</h3>
+<h3>Top 10 comming trips:</h3>
 
 <ol class="round">
     <li class="one">
-        <h5>Getting Started</h5>
-        ASP.NET Web Pages and the new Razor syntax provide a fast, approachable, and lightweight way to combine server code with HTML
-        to create dynamic web content. Connect to databases, add video, link to social networking sites, and include many more features
-        that let you create beautiful sites using the latest web standards.
-        <a href="https://go.microsoft.com/fwlink/?LinkId=245139">Learn more…</a>
+        <h5>Totora</h5>
+        <figure>
+            <img src="http://www.boliviaentusmanos.com/turismo/imagenes/totora1.jpg" alt="The Pulpit Rock" width="304" height="228">
+        </figure>
+        <p>
+            <strong>Date: </strong><time style="color:blue;" datetime="2017-06-24">June 24st, 2017</time>
+        </p>
+        This is a place where I always enjoy to go back because is where I growth and
+        I would like to go back every time I can.
     </li>
 
     <li class="two">
-        <h5>Add NuGet packages and jump start your coding</h5>
-        NuGet makes it easy to install and update free libraries and tools.
-        <a href="https://go.microsoft.com/fwlink/?LinkId=245140">Learn more…</a>
+        <h5>Valle sajta</h5>
+        <figure>
+            <img src="http://mw2.google.com/mw-panoramio/photos/medium/80232051.jpg" alt="The Pulpit Rock" width="304" height="228">
+        </figure>
+        <p>
+            <strong>Date: </strong><time style="color:blue;" datetime="2017-07-23">July 23st, 2017</time>
+        </p>
+        This is a very good place where I like to travel because it is a very peaceful place and
+        very enjoyable water an environment
     </li>
 
     <li class="three">
-        <h5>Find Web Hosting</h5>
-        You can easily find a web hosting company that offers the right mix of features and price for your applications.
-        <a href="https://go.microsoft.com/fwlink/?LinkId=245143">Learn more…</a>
+        <h5>Chile</h5>
+        <figure>
+            <img src="http://enviajes.cl/wp-content/uploads/2013/03/Viaje-a-Iquique.jpg" alt="The Pulpit Rock" width="304" height="228">
+        </figure>
+        <p>
+            <strong>Date: </strong><time style="color:blue;" datetime="2017-10-31">October 31st, 2017</time>
+        </p>
+        Well, Chile is a country where I like to enjoy to be on vacation, there is a beach that is
+        the place that I like to be as much time I could.
     </li>
 </ol>
