--- a/Contact.cshtml
+++ b/Contact.cshtml
@@ -5,7 +5,7 @@
 
 <hgroup class="title">
     <h1>@Page.Title.</h1>
-    <h2>Your contact page.</h2>
+    <h2>Next Travel.</h2>
 </hgroup>
 
 <section class="contact">
@@ -14,11 +14,7 @@
     </header>
     <p>
         <span class="label">Main:</span>
-        <span>425.555.0100</span>
-    </p>
-    <p>
-        <span class="label">After Hours:</span>
-        <span>425.555.0199</span>
+        <span>591-60355282</span>
     </p>
 </section>
 
@@ -28,15 +24,15 @@
     </header>
     <p>
         <span class="label">Support:</span>
-        <span><a href="mailto:Support@example.com">Support@example.com</a></span>
+        <span><a href="mailto:luis.arce22@gmail.com">luis.arce22@gmail.com</a></span>
     </p>
     <p>
         <span class="label">Marketing:</span>
-        <span><a href="mailto:Marketing@example.com">Marketing@example.com</a></span>
+        <span><a href="mailto:luis.arce22@gmail.com">luis.arce22@gmail.com</a></span>
     </p>
     <p>
         <span class="label">General:</span>
-        <span><a href="mailto:General@example.com">General@example.com</a></span>
+        <span><a href="mailto:luis.arce22@gmail.com">luis.arce22@gmail.com</a></span>
     </p>
 </section>
 
@@ -45,7 +41,7 @@
         <h3>Address:</h3>
     </header>
     <p>
-        One Microsoft Way<br />
-        Redmond, WA 98052-6399
+        Bolivia<br />
+        Cochabamba, Cercado
     </p>
 </section>
