--- a/_SiteLayout.cshtml
+++ b/_SiteLayout.cshtml
@@ -53,7 +53,7 @@
         <footer>
             <div class="content-wrapper">
                 <div class="float-left">
-                    <p>&copy; @DateTime.Now.Year - My ASP.NET Web Page</p>
+                    <p>&copy; @DateTime.Now.Year - Travel Planner</p>
                 </div>
             </div>
         </footer>
