--- a/Default.cshtml
+++ b/Default.cshtml
@@ -19,7 +19,8 @@
 }
 
 <h3>Top 10 comming trips:</h3>
-
+<span class="myButton" id="myButton" 
+      style="box-shadow: rgb(255, 255, 255) 0px 1px 0px 0px inset;background: linear-gradient(rgb(237, 237, 237) 5%, rgb(223, 223, 223) 100%) rgb(237, 237, 237);border-radius: 6px;border: 1px solid rgb(220, 220, 220);display: inline-block;cursor: pointer;color: rgb(119, 119, 119);font-family: Arial;font-size: 15px;font-weight: bold;padding: 6px 24px; text-decoration: none; text-shadow: rgb(255, 255, 255) 0px 1px 0px;">ADD</span>
 <ol class="round">
     <li class="one">
         <h5>Totora</h5>
