--- a/Default.cshtml
+++ b/Default.cshtml
@@ -1,7 +1,10 @@
 ﻿@{
+
   Layout = "~/_SiteLayout.cshtml";
   Page.Title = "Welcome";
 
+  NextTripDBEntities1 db = new NextTripDBEntities1();
+  List<NextTrip> trips = db.NextTrips.ToList<NextTrip>();
 }
 
 @section featured {
@@ -20,9 +23,23 @@
 }
 
 <h3>Top 10 comming trips:</h3>
-<span class="myButton" id="myButton" 
-      style="box-shadow: rgb(255, 255, 255) 0px 1px 0px 0px inset;background: linear-gradient(rgb(237, 237, 237) 5%, rgb(223, 223, 223) 100%) rgb(237, 237, 237);border-radius: 6px;border: 1px solid rgb(220, 220, 220);display: inline-block;cursor: pointer;color: rgb(119, 119, 119);font-family: Arial;font-size: 15px;font-weight: bold;padding: 6px 24px; text-decoration: none; text-shadow: rgb(255, 255, 255) 0px 1px 0px;">ADD</span>
+<a href="~/NewTrip.cshtml" class="btn btn-primary"> New Trip</a>
+
 <ol class="round">
+    @foreach (var trip in trips)
+    {
+        <li class="one">
+            <h5>@trip.Location</h5>
+            <figure>
+                <img src="@trip.ImageUrl" alt="The Pulpit Rock" width="304" height="228">
+            </figure>
+            <p>
+                <strong>Date: </strong><time style="color:blue;" datetime="2017-06-24">June 24st, 2017</time>
+            </p>
+            @trip.Description
+        </li>
+    }
+
     <li class="one">
         <h5>Totora</h5>
         <figure>
