Updated New trip page to redirect to default page after save the record

--- a/NewTrip.cshtml
+++ b/NewTrip.cshtml
@@ -16,6 +16,7 @@
     NextTripDBEntities1 db = new NextTripDBEntities1();
     db.NextTrips.Add(nextTrip);
     db.SaveChanges();
+    Response.Redirect("Default.cshtml");
   }
 }
 
