Added Trip Show page

--- a/Default.cshtml
+++ b/Default.cshtml
@@ -23,13 +23,13 @@
 }
 
 <h3>Top 10 comming trips:</h3>
-<a href="~/NewTrip.cshtml" class="btn btn-primary"> New Trip</a>
+<a href="~/TripNew.cshtml" class="btn btn-primary"> New Trip</a>
 
 <ol class="round">
     @foreach (var trip in trips)
     {
         <li class="one">
-            <h5>@trip.Location</h5><a href="~/EditTrip.cshtml?Id=@trip.Id">EDIT</a>
+            <h5>@trip.Location</h5><a href="~/TripShow.cshtml?Id=@trip.Id">SHOW</a><a href="~/TripEdit.cshtml?Id=@trip.Id">EDIT</a>
             <figure>
                 <img src="@trip.ImageUrl" alt="The Pulpit Rock" width="304" height="228">
             </figure>
@@ -39,40 +39,4 @@
             @trip.Description
         </li>
     }
-
-    <li class="one">
-        <h5>Totora</h5>
-        <figure>
-            <img src="http://www.boliviaentusmanos.com/turismo/imagenes/totora1.jpg" alt="The Pulpit Rock" width="304" height="228">
-        </figure>
-        <p>
-            <strong>Date: </strong><time style="color:blue;" datetime="2017-06-24">June 24st, 2017</time>
-        </p>
-        This is a place where I always enjoy to go back because is where I growth and
-        I would like to go back every time I can.
-    </li>
-
-    <li class="two">
-        <h5>Valle sajta</h5>
-        <figure>
-            <img src="http://mw2.google.com/mw-panoramio/photos/medium/80232051.jpg" alt="The Pulpit Rock" width="304" height="228">
-        </figure>
-        <p>
-            <strong>Date: </strong><time style="color:blue;" datetime="2017-07-23">July 23st, 2017</time>
-        </p>
-        This is a very good place where I like to travel because it is a very peaceful place and
-        very enjoyable water an environment
-    </li>
-
-    <li class="three">
-        <h5>Chile</h5>
-        <figure>
-            <img src="http://enviajes.cl/wp-content/uploads/2013/03/Viaje-a-Iquique.jpg" alt="The Pulpit Rock" width="304" height="228">
-        </figure>
-        <p>
-            <strong>Date: </strong><time style="color:blue;" datetime="2017-10-31">October 31st, 2017</time>
-        </p>
-        Well, Chile is a country where I like to enjoy to be on vacation, there is a beach that is
-        the place that I like to be as much time I could.
-    </li>
 </ol>
