--- a/TripEdit.cshtml
+++ b/TripEdit.cshtml
@@ -42,11 +42,11 @@
 </hgroup>
 
 <form method="post">
-  <label for="tripLocation"></label>
-  <input id="tripLocation" name="tripLocation" type="text" placeholder="trip location" required value="@nextTrip.Location"/>
-  <label for="tripImage"></label>
-  <input id="tripImage" name="tripImage" type="text" placeholder="trip image" required  value="@nextTrip.ImageUrl"/>
-  <label for="tripDescription"></label>
-  <textarea id="tripDescription" name="tripDescription" type="text" placeholder="Description of the trip"> @nextTrip.Description </textarea><br />
+  <dt><label for="tripLocation">Tip Location</label></dt>
+  <dd><input id="tripLocation" name="tripLocation" type="text" placeholder="trip location" required value="@nextTrip.Location" /></dd>
+  <dt><label for="tripImage">Tip Image</label></dt>
+  <dd><input id="tripImage" name="tripImage" type="text" placeholder="trip image" required value="@nextTrip.ImageUrl" /></dd>
+  <dt><label for="tripDescription">Description</label></dt>
+  <dd><textarea id="tripDescription" name="tripDescription" type="text" placeholder="Description of the trip"> @nextTrip.Description </textarea><br /></dd>
   <input type="submit" value="Save" />
 </form>
